--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Phonebook API challenge for Chalkboard",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,12 @@
     "express": "^4.17.1",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14"
+  },
+  "devDependencies": {
+    "jest": "^27.4.3",
+    "mongodb-memory-server": "^8.0.4"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
