--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/CMDR-Kiel42/PhonebookAPI#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^4.2.1",
-    "mongoose": "^6.0.14"
+    "mongoose": "^6.0.14",
+    "passport": "^0.5.0",
+    "passport-http": "^0.3.0"
   },
   "devDependencies": {
     "jest": "^27.4.3",
